Fixed the overlapping dots on the homepage

--- a/brillianideas/brillianIDEAS/css/dots.css
+++ b/brillianideas/brillianIDEAS/css/dots.css
@@ -32,6 +32,7 @@ dotstyle ul {
     padding: 0;
     width: 100vw;
     justify-content: center;
+    z-index: 1;
 }
 
 .dotstyle li {
